--- a/SmartSales/app/build.gradle
+++ b/SmartSales/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.squareup:otto:1.3.5'
     compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
 }
