--- a/SmartSales/app/src/main/AndroidManifest.xml
+++ b/SmartSales/app/src/main/AndroidManifest.xml
@@ -6,15 +6,33 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:screenOrientation="landscape"
+        android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="landscape"
             android:name=".activities.SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:screenOrientation="landscape"
+            android:name=".activities.SignUpActivity"
+            android:label="@string/title_activity_sign_up" >
+        </activity>
+        <activity
+            android:name=".activities.HomeActivity"
+            android:label="@string/title_activity_home" >
+            android:screenOrientation="landscape"
+        </activity>
+        <activity
+            android:name=".activities.DealerCard"
+            android:screenOrientation="landscape"
+            android:label="@string/title_activity_dealer_card" >
         </activity>
     </application>
 
