--- a/SmartSales/app/src/main/AndroidManifest.xml
+++ b/SmartSales/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
         </activity>
         <activity
             android:name=".activities.HomeActivity"
-            android:label="@string/title_activity_home" >
+            android:label="@string/title_activity_home"
             android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
             android:name=".activities.DealerCard"
