--- a/SmartSales/app/src/main/AndroidManifest.xml
+++ b/SmartSales/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:screenOrientation="landscape"
         android:theme="@style/AppTheme" >
         <activity
-            android:screenOrientation="landscape"
-            android:name=".activities.SplashActivity"
+            android:name=".activities.Splash"
             android:label="@string/app_name"
+            android:screenOrientation="landscape"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,20 +20,45 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="landscape"
-            android:name=".activities.SignUpActivity"
-            android:label="@string/title_activity_sign_up" >
+            android:name=".activities.SignUp"
+            android:label="@string/title_activity_sign_up"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name=".activities.HomeActivity"
+            android:name=".activities.Home"
             android:label="@string/title_activity_home"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
+        </activity>
+        <activity
+            android:name=".activities.DealerCard"
+            android:label="@string/title_activity_dealer_card"
             android:screenOrientation="landscape"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name=".activities.DealerCard"
+            android:name=".activities.BrandStory"
+            android:label="@string/title_activity_brand_story"
             android:screenOrientation="landscape"
-            android:label="@string/title_activity_dealer_card" >
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+        </activity>
+        <activity
+            android:name=".activities.NDE"
+            android:label="@string/title_activity_nde"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+        </activity>
+        <activity
+            android:name=".activities.MessageBoard"
+            android:label="@string/title_activity_message_board"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+        </activity>
+        <activity
+            android:name=".activities.Consultation"
+            android:label="@string/title_activity_consultation"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
     </application>
 
