Added QuickMenu to BrandStory, Consultation & CarDetails

--- a/SmartSales/app/src/main/AndroidManifest.xml
+++ b/SmartSales/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hyundai.teli.smartsales" >
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -75,6 +76,10 @@
             android:label="@string/title_activity_car_details"
             android:screenOrientation="landscape"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
+        </activity>
+        <activity
+            android:name=".activities.ProfileFullScreen"
+            android:label="@string/title_activity_profile_full_screen" >
         </activity>
     </application>
 
