--- a/SmartSales/app/build.gradle
+++ b/SmartSales/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.mcxiaoke.volley:library:1.0.+'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.joanzapata.pdfview:android-pdfview:1.0.+@aar'
+
 }
