--- a/SmartSales/app/build.gradle
+++ b/SmartSales/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.github.traex.rippleeffect:library:1.2.3'
     compile 'com.getbase:floatingactionbutton:1.8.0'
     compile 'com.github.satyan:sugar:1.3'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
     compile files('libs/httpmime-4.2.4.jar')
 }
